--- a/DeployWebAppTest1/Pages/Index.cshtml
+++ b/DeployWebAppTest1/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Davro GG - Deployed using GIT Local !!!!22222</h1>
+    <h1 class="display-4">Davro GG - Deployed using GIT Local V2</h1>
     <p>Test för att Deploy till Azure App Service.</p>
 </div>
